<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:background="#818FDF"
    android:layout_gravity="center">



    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:id="@+id/edit_email2"
        android:textColorLink="@color/black"
        android:shadowColor="@color/black"
        android:textColorHighlight="@color/black"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        tools:ignore="MissingConstraints">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:background="#C9CEEA"
            android:textColorLink="@color/black"
            android:shadowColor="@color/black"
            android:textColorHighlight="@color/black"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:inputType="textEmailAddress"
            android:padding="20dp"
            tools:ignore="HardcodedText" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:id="@+id/edit_password2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:passwordToggleEnabled="true"
        android:textColorLink="@color/black"
        android:shadowColor="@color/black"
        android:textColorHighlight="@color/black"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        app:layout_constraintTop_toBottomOf="@id/edit_email2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="20dp"
            android:textColorLink="@color/black"
            android:shadowColor="@color/black"
            android:textColorHighlight="@color/black"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:background="#C9CEEA"
            tools:ignore="HardcodedText" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/register"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        android:backgroundTint="@color/design_default_color_secondary"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edit_password2"
        tools:ignore="HardcodedText" />

    <Button
        android:id="@+id/button_login"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:text="@string/Go_To_login"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:backgroundTint="@color/design_default_color_secondary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_register"
        tools:ignore="HardcodedText" />

</androidx.constraintlayout.widget.ConstraintLayout>