...
    <string name="cvsforyou">\" Cvs For You\"</string>
    <string name="Cv_sent_successfully">Cv sent successfully</string>
    <string name="exit_user">Exit User</string>
    <string name="jobnotfound">Job Not Found</string>
    <string name="Amount_of_Jobs_Found">\"Amount of Jobs Found: \"</string>
    <string name="Job_Not_Found">Job Not Found</string>
    <string name="sign_up">sign up</string>
    <string name="password">password</string>
    <string name="login">login</string>
    <string name="forgot_password">forgot password</string>
    <string name="choose_as_which_user_you_enter">Choose as Which User you Enter</string>
    <string name="looking_for_job">Looking For Job</string>
    <string name="looking_for_employees">Looking For Employees</string>
    <string name="app_manager">App Manager</string>
    <string name="or_sign_in_with">or sign in with</string>
    <string name="upload_pdf">Upload PDF</string>
    <string name="enter_pdf_file_name">Enter PDF file name</string>
    <string name="view_pdf">View PDF</string>
    <string name="Delete_Watch">Delete/Watch</string>
    <string name="Watch_or_Delete_File">Watch or Delete File:</string>
    <string name="Delete_All_Files">Delete All Files?</string>
    <string name="Files_Delete_successfully">Files Delete successfully</string>
    <string name="Yo_want_to_see_this_File">You want to see this File?</string>
    <string name="You_want_to_see_this_File">You want to see this File?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="register">register</string>
    <string name="Go_To_login">Go To login</string>
    <string name="Cv_was_already_sent">Cv was already sent</string>
...
