...
        android:textSize="40sp"
        android:textStyle="bold" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tv_name"
        style="@style/ThemeOverlay.Material3.AutoCompleteTextView.FilledBox"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/text_pdf"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_pdf_file_name"
            android:id="@+id/name"
            android:textColor="@color/teal_200"
            android:background="@drawable/shape"
            android:textSize="22sp"
            android:textColorHint="@color/black"
           android:layout_margin="10dp"/>


    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/upload_btn"
        style="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_name"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="90dp"
...
        android:padding="10dp"
        android:text="@string/upload_pdf"
        android:textColor="@color/teal_200"
        android:textSize="30sp" />

    <Button
        android:id="@+id/ViewPdf_btn"
        style="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/upload_btn"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="90dp"
...
