...



    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/navButtons"
        android:background="#E4ECEC"
        >


        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
...
                        android:textColor="@color/white" />


                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/LayoutCv"
                    android:layout_width="500dp"
                    android:layout_height="100dp"
                    android:layout_below="@+id/LayoutProfile"
                    android:layout_centerHorizontal="true"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="30dp"
...
                        android:backgroundTint="@color/white"
                        android:text="@string/submit_cv"
                        android:textColor="@color/black"
                        android:textSize="20sp" />

                    <ImageButton
                        android:id="@+id/btnUpCv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/txtUpCv"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="5dp"
                        android:background="@color/white"
...
